finished donaton project

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="/icons/pngaaa.com-177853.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -205,12 +203,12 @@
 
         </section> 
     </main>
-    <footer>
-        <div class="foot-cursive">
+    <footer class="footer-main">
+        <div class="footer-cursive">
             <h2>Be Humble</h2>
         </div>
-        <div>
-            <p>I'm Gonna Dot It</p>
+        <div class="footer-p">
+            <p>I'm Gonna Do It</p>
         </div>
 
     </footer>
