responsive for medium sized devices

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <h3>5000tk</h3>
                 </div>
             </div>
-            <p>Other Amount(Taka)</p>
+            <p class="sec-1-para">Other Amount(Taka)</p>
             <hr>
             <button type="button" class="prime-btn">Donate Now</button>
             
